Add initial copy and styling to About page

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -4,7 +4,23 @@
         <h1>Meet Derek</h1>
 
         <p>
-            Meet Derek...
+            Derek Kent is a husband, father, veteran, engineer, and progressive leader who has been fighting for people's economic and civil rights his entire adult life.
+        </p>
+
+        <p>
+            Derek and his wife Phaby have settled their roots her in Maryland for the better part of the last decade, but have national and international experience confronting the challenges we face as a community — strengthening public education for all children, promoting healthy and sustainable growth, making our economy work for everyone, and advancing social justice.
+        </p>
+
+        <p>
+            Derek is a self-taught Software Engineer, and has been working with the non-profit OpenStax organization for the past 5 years to help bring high-quality, free educational materials to K-12 and College students.
+        </p>
+
+        <p>
+            In the aftermath of 9/11, Derek suspended his college education to enlist in the US Army. He served honorably in Kuwait and Iraq as a solider, even while speaking out against the war in his capacity as a private citizen. He later attended the United States Military Academy at West Point and Syracuse University and holds a degree in International Relations and Chinese Language.
+        </p>
+
+        <p>
+            Derek has lived abroad in Germany, Taiwan, and China and worked for the US Department of State and for Senator Gillibrand. He is conversant in Mandarin Chinese and can read and write both Simplified and Traditional Chinese.
         </p>
     </article>
 </template>
