Add Issues Page

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -48,7 +48,7 @@
     <article>
         <h1>Together We Can</h1>
 
-        <ul class="vision-list">
+        <ul class="vision-list issue-blocks">
             <li>
                 <h2>Make Government Work for Us</h2>
                 <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Make Government work for us" width="150" height="150" />
