--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -123,8 +123,9 @@ p {
 @import 'components/blocks';
 @import 'components/buttons';
 @import 'components/forms';
-@import 'components/notices';
 // @import 'components/headers';
+@import 'components/issue-blocks';
+@import 'components/notices';
 // @import 'components/responsive';
 
 .banner {
