Rename 'Economic Inequality' to 'Minimum Wage'

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -65,13 +65,6 @@
             </li>
 
             <li>
-                <a href="/issues/economic-inequality">
-                    <h2>Economic Inequality</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Economic Inequality" width="150" height="150" />
-                </a>
-            </li>
-
-            <li>
                 <a href="/issues/education">
                     <h2>Education</h2>
                     <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Education" width="150" height="150" />
@@ -110,6 +103,13 @@
                 <a href="/issues/marijuana">
                     <h2>Marijuana</h2>
                     <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Marijuana" width="150" height="150" />
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/minimum-wage">
+                    <h2>Minimum Wage</h2>
+                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Minimum Wage" width="150" height="150" />
                 </a>
             </li>
 
