Change copyright notice to CC0

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -35,8 +35,7 @@
         <span>Authority: Friends of Derek Kent, Phaby Kent, Treasurer</span>
     </div>
 
-    <span>© {new Date().getFullYear()} Friends of Derek Kent</span>
-    <span> | </span>
+    <span class="copyright">No Rights Reserved</span>
     <span>
         <a href="/privacy">Privacy Policy</a>
     </span>
