Always skip patching Google Map wrapping element's children

--- a/src/app/pages/map/map.html
+++ b/src/app/pages/map/map.html
@@ -34,6 +34,6 @@
             </p>
         </if>
 
-        <div class="district32-map" skipNode="model.resident !== undefined" key="map"></div>
+        <div class="district32-map" skip="true" key="map"></div>
     </article>
 </template>
