Rename 'Citizen's Wage' to 'End Poverty'

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -20,8 +20,8 @@
 
             <li>
                 <a href="/issues/ubi">
-                    <h2>Citizen's Wage</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="A guaranteed wage for all citizens over 18" width="150" height="150" />
+                    <h2>End Poverty</h2>
+                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="End poverty in America in our lifetime" width="150" height="150" />
                 </a>
             </li>
 
