Add initial accessibility page and commitments

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -36,9 +36,8 @@
     </div>
 
     <span class="copyright">No Rights Reserved</span>
-    <span>
-        <a href="/privacy">Privacy Policy</a>
-    </span>
+    <span class="privacy"><a href="/privacy">Privacy Policy</a></span>
+    <span class="accessibility"><a href="/accessibility">Accessibility</a></span>
 </div>
 
 <div class="md5">9ec4c12949a4f31474f299058ce2b22a</div>
