--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -51,6 +51,7 @@ $colors: (
     background: #f0f3fa,
     links: #208feb,
     serenity: #91a8d0,
+    harebell: #6a6fc4,
     black: black,
     white: white
 );
