Mark success criteria issues' level

--- a/src/app/pages/accessibility/accessibility.html
+++ b/src/app/pages/accessibility/accessibility.html
@@ -25,15 +25,15 @@
 
         <p>We’re working hard to achieve our goal of Level AAA accessibility, but we realize there are some criteria we are unable to meet at this time. The following information explains what AA and AAA criteria we do not support by default, and what we have done to provide alternative solutions.</p>
 
-        <h3>Success Criteria 1.2.6:</h3>
-
-        <p>We are not in control of all audio and video content on this site and are unable to provide sign language interpretation of prerecorded audio at this time. We do however only select video content that provides closed captioning, as required by success criteria 1.2.2. We understand though that this is not always an adequate solution and apologize for any inconvenience.</p>
-
-        <h3>Success Criteria 1.4.3:</h3>
+        <h3 class="aa">Success Criteria 1.4.3:</h3>
 
         <p>Most of this site meets color contrast requirements for AA accessibility, with some exceptions. If you require full AA color contrast accessibility, enable the AA-compliant version of this site using the controls in the \"Toggle Accessibility Level\" section above.</p>
 
-        <h3>Success Criteria 1.4.6:</h3>
+        <h3 class="aaa">Success Criteria 1.2.6:</h3>
+
+        <p>We are not in control of all audio and video content on this site and are unable to provide sign language interpretation of prerecorded audio at this time. We do however only select video content that provides closed captioning, as required by success criteria 1.2.2. We understand though that this is not always an adequate solution and apologize for any inconvenience.</p>
+
+        <h3 class="aaa">Success Criteria 1.4.6:</h3>
 
         <p>Most content on this site meets color contrast requirements for AAA accessibility, with some exceptions. If you require full AAA color contrast accessibility, enable the AAA-compliant version of this site using the controls in the \"Toggle Accessibility Level\" section above.</p>
 
