--- a/src/app/pages/accessibility/accessibility.scss
+++ b/src/app/pages/accessibility/accessibility.scss
@@ -6,6 +6,14 @@
         background-image: url('/images/accessibility/one-world.jpg');
     }
 
+    .level {
+        color: color(blue);
+        display: block;
+        font-size: 2rem;
+        font-weight: bold;
+        text-align: center;
+    }
+
     .accessibility-level {
         display: flex;
         list-style-type: none;
@@ -17,6 +25,11 @@
             flex: 1 1 25%;
             font-size: 3rem;
             margin: 0 3rem;
+            position: relative;
+
+            &[aria-checked="true"] {
+                box-shadow: inset 0px 0px 3px 3px rgba(color(black), .5);
+            }
         }
     }
 
