--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -73,3 +73,9 @@ $focus-colors: (
         }
     }
 }
+
+.btn-focus-default:focus {
+    outline: auto medium color(harebell);
+    outline: auto 0.5rem -webkit-focus-ring-color;
+    outline-offset: 0.1rem;
+}
