Improve privacy keyboard navigation

--- a/src/app/pages/privacy/privacy.html
+++ b/src/app/pages/privacy/privacy.html
@@ -48,7 +48,7 @@
                     that will only be used to remember and confirm this setting.
                 </p>
 
-                <button class="opt-in btn btn-green" key="opt-in">Opt In</button>
+                <button class="opt-in btn btn-green btn-focus-default" key="opt-in">Opt In</button>
             <else>
                 <div>
                     <span class="notice notice-yellow">Yes, this session is being recorded.</span>
@@ -101,7 +101,7 @@
                     your browser that will only be used to remember and confirm this setting.
                 </p>
 
-                <button class="opt-out btn btn-red">Opt Out</button>
+                <button class="opt-out btn btn-red btn-focus-default">Opt Out</button>
             </if>
         </div>
 
