--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -60,5 +60,7 @@
         <p>
             As the wealthiest State in the Union, I believe Maryland can and should be a leader in researching and implementing such a solution.
         </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
     </article>
 </template>
