--- a/src/app/pages/accessibility/accessibility.scss
+++ b/src/app/pages/accessibility/accessibility.scss
@@ -28,7 +28,7 @@
             position: relative;
 
             &[aria-checked="true"] {
-                box-shadow: inset 0px 0px 3px 3px rgba(color(black), .5);
+                box-shadow: inset 0 0 3px 3px rgba(color(black), 0.5);
             }
         }
     }
