--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -62,8 +62,20 @@ $colors: (
         darker: darken(#6a6fc4, 5%),
         dark: darken(#6a6fc4, 10%)
     ),
-    background: #f0f3fa,
-    links: #208feb,
+    links: (
+        light: lighten(#208feb, 20%),
+        lighter: lighten(#208feb, 10%),
+        base: #208feb,
+        darker: darken(#208feb, 10%),
+        dark: darken(#208feb, 20%)
+    ),
+    background: (
+        light: lighten(#f0f3fa, 20%),
+        lighter: lighten(#f0f3fa, 10%),
+        base: #f0f3fa,
+        darker: darken(#f0f3fa, 10%),
+        dark: darken(#f0f3fa, 20%)
+    ),
     black: black,
     white: white
 );
