--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -1,27 +1,29 @@
-<nav>
-    <ul>
-        <li>
-            <a href="/">
-                <img src="/images/kent.svg" alt="Derek Kent for Maryland District 32" height="40" />
-            </a>
-        </li>
-        <li>
-            <a href="/about" class="menu-link">Meet Derek</a>
-        </li>
-        <li>
-            <a href="/issues" class="menu-link">Vision</a>
-        </li>
-        <li>
-            <a href="/events" class="menu-link">Events</a>
-        </li>
-        <li>
-            <a href="/news" class="menu-link">News</a>
-        </li>
-        <li>
-            <a href="/join" class="menu-link">Join</a>
-        </li>
-        <li>
-            <a href="/contribute" class="btn btn-red">Contribute</a>
-        </li>
-    </ul>
-</nav>
+<template args="page">
+    <nav>
+        <ul>
+            <li>
+                <a href="/">
+                    <img src="/images/kent.svg" alt="Derek Kent for Maryland District 32" height="40" />
+                </a>
+            </li>
+            <li>
+                <a href="/about" class="menu-link{page === 'about' ? ' active' : ''}">Meet Derek</a>
+            </li>
+            <li>
+                <a href="/issues" class="menu-link{page === 'issues' ? ' active' : ''}">Vision</a>
+            </li>
+            <li>
+                <a href="/events" class="menu-link{page === 'events' ? ' active' : ''}">Events</a>
+            </li>
+            <li>
+                <a href="/news" class="menu-link{page === 'news' ? ' active' : ''}">News</a>
+            </li>
+            <li>
+                <a href="/join" class="menu-link{page === 'join' ? ' active' : ''}">Join</a>
+            </li>
+            <li>
+                <a href="/contribute" class="btn btn-red">Contribute</a>
+            </li>
+        </ul>
+    </nav>
+</template>
