--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -11,6 +11,7 @@
         font-weight: bold;
         letter-spacing: 0.1rem;
 
+        &.active,
         &:active,
         &:focus,
         &:hover {
