Add images to Issues list

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -7,42 +7,42 @@
             <li>
                 <a href="/issues/elections">
                     <h2>Modern Elections</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Free and fair elections for the 21st Century" width="150" height="150" />
+                    <img src="/images/issues/poll.svg" alt="Free and fair elections for the 21st Century" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/opengov">
                     <h2>Open Government</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Transparent, responsive Government" width="150" height="150" />
+                    <img src="/images/issues/opengov.svg" alt="Transparent, responsive Government" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/ubi">
                     <h2>End Poverty</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="End poverty in America in our lifetime" width="150" height="150" />
+                    <img src="/images/issues/star.svg" alt="End poverty in America in our lifetime" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/healthcare">
                     <h2>Universal Healthcare</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Recognize Healthcare as a Universal Right" width="150" height="150" />
+                    <img src="/images/issues/healthcare.svg" alt="Recognize Healthcare as a Universal Right" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/justice">
-                    <h2>Social Justice Contract</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="A new social contract for our justice system" width="150" height="150" />
+                    <h2>Social Justice</h2>
+                    <img src="/images/issues/fist.svg" alt="A new social contract for our justice system" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/policy">
                     <h2>Evidence-based Policies</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Promote forward-looking policies backed by rigorous scientific evidence" width="150" height="150" />
+                    <img src="/images/issues/chart.svg" alt="Promote forward-looking policies backed by rigorous scientific evidence" width="170" height="170">
                 </a>
             </li>
         </ul>
@@ -51,100 +51,121 @@
 
         <ul class="vision-list issue-blocks">
             <li>
-                <a href="/issues/abortion">
-                    <h2>Abortion</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Abortion" width="150" height="150" />
+                <a href="/issues/energy">
+                    <h2>Clean Energy</h2>
+                    <img src="/images/issues/sun.svg" alt="Clean Energy" width="170" height="170">
                 </a>
             </li>
 
             <li>
-                <a href="/issues/consumer-protection">
+                <a href="/issues/consumers">
                     <h2>Consumer Protection</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Consumer Protection" width="150" height="150" />
+                    <img src="/images/issues/shopping.svg" alt="Consumer Protection" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/education">
                     <h2>Education</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Education" width="150" height="150" />
+                    <img src="/images/issues/education.svg" alt="Education" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/environment">
                     <h2>Environment</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Environment" width="150" height="150" />
+                    <img src="/images/issues/nature.svg" alt="Environment" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/family">
+                    <h2>Family Care</h2>
+                    <img src="/images/issues/stroller.svg" alt="Family Care" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/fracking">
+                    <h2>Fracking</h2>
+                    <img src="/images/issues/save-water.svg" alt="Fracking" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/lgbt">
                     <h2>LGBT Rights</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="LGBT Rights" width="150" height="150" />
+                    <img src="/images/issues/rainbow.svg" alt="LGBT Rights" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/infrastructure">
                     <h2>Infrastructure</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Infrastructure" width="150" height="150" />
+                    <img src="/images/issues/train.svg" alt="Infrastructure" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/guns">
                     <h2>Gun Control</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Gun Control" width="150" height="150" />
+                    <img src="/images/issues/gun.svg" alt="Gun Control" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/marijuana">
                     <h2>Marijuana</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Marijuana" width="150" height="150" />
+                    <img src="/images/issues/marijuana.svg" alt="Marijuana" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/minimum-wage">
                     <h2>Minimum Wage</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Minimum Wage" width="150" height="150" />
+                    <img src="/images/issues/dollar.svg" alt="Minimum Wage" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/corruption">
+                    <h2>Money in Politics</h2>
+                    <img src="/images/issues/money.svg" alt="Money in Politics" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/privacy">
                     <h2>Privacy</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Privacy" width="150" height="150" />
+                    <img src="/images/issues/fingerprint.svg" alt="Privacy" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/religion">
                     <h2>Religious Freedom</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Religious Freedom" width="150" height="150" />
-                </a>
-            </li>
-
-            <li>
-                <a href="/issues/energy">
-                    <h2>Renewable Energy</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Renewable Energy" width="150" height="150" />
+                    <img src="/images/issues/khanda.svg" alt="Religious Freedom" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/taxes">
                     <h2>Taxes</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Taxes" width="150" height="150" />
+                    <img src="/images/issues/bank.svg" alt="Taxes" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/technology">
                     <h2>Technology</h2>
-                    <img src="http://placehold.it/170x170/91a8d0/ffffff" alt="Technology" width="150" height="150" />
+                    <img src="/images/issues/devices.svg" alt="Technology" width="170" height="170">
+                </a>
+            </li>
+
+            <li>
+                <a href="/issues/women">
+                    <h2>Women's Rights</h2>
+                    <img src="/images/issues/venus.svg" alt="Women's Rights" width="170" height="170">
                 </a>
             </li>
         </ul>
