--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -49,33 +49,45 @@
 
         <ul class="vision-list issue-blocks">
             <li>
-                <h2>Make Government Work for Us</h2>
-                <img src="/images/issues/opengov.svg" alt="Make Government work for us" width="150" height="150" />
+                <a href="/issues/opengov">
+                    <h2>Make Government Work for Us</h2>
+                    <img src="/images/issues/opengov.svg" alt="Make Government work for us" width="150" height="150">
+                </a>
             </li>
 
             <li>
-                <h2>Reform Our Criminal Justice System</h2>
-                <img src="/images/issues/fist.svg" alt="Reform our criminal justice system" width="150" height="150" />
+                <a href="/issues/justice">
+                    <h2>Reform Our Criminal Justice System</h2>
+                    <img src="/images/issues/fist.svg" alt="Reform our criminal justice system" width="150" height="150">
+                </a>
             </li>
 
             <li>
-                <h2>Ensure a Living Wage for all Workers</h2>
-                <img src="/images/issues/dollar.svg" alt="Fight for a $15 minimum wage" width="150" height="150" />
+                <a href="/issues/wages">
+                    <h2>Ensure a Living Wage for all Workers</h2>
+                    <img src="/images/issues/dollar.svg" alt="Fight for a $15 minimum wage" width="150" height="150">
+                </a>
             </li>
 
             <li>
-                <h2>Give Our Children a Brighter Future</h2>
-                <img src="/images/issues/education.svg" alt="Improve our children's education" width="150" height="150" />
+                <a href="/issues/education">
+                    <h2>Give Our Children a Brighter Future</h2>
+                    <img src="/images/issues/education.svg" alt="Improve our children's education" width="150" height="150">
+                </a>
             </li>
 
             <li>
-                <h2>Create a More Just Society for Everyone</h2>
-                <img src="/images/issues/equality.svg" alt="Create a more just society" width="150" height="150" />
+                <a href="/issues/equality">
+                    <h2>Create a More Just Society for Everyone</h2>
+                    <img src="/images/issues/equality.svg" alt="Create a more just society" width="150" height="150">
+                </a>
             </li>
 
             <li>
-                <h2>Send Our Community Values to Annapolis</h2>
-                <img src="/images/issues/forward.svg" alt="See other issues" width="150" height="150" />
+                <a href="/issues/environment">
+                    <h2>Protect Our Environment</h2>
+                    <img src="/images/issues/nature.svg" alt="Protect Our Environment" width="150" height="150">
+                </a>
             </li>
         </ul>
 
